# perspective-conan

./: .gitignore  CONAN.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: conan-release.yaml
examples/python-clickhouse-virtual/: server.py
examples/python-duckdb-virtual/: server.py
examples/rust-axum/: package.json
examples/rust-axum/src/: index.html  main.rs
rust/perspective-client/: Cargo.toml
rust/perspective-client/src/rust/: proto.rs
rust/perspective-python/src/server/: mod.rs
rust/perspective-server/: Cargo.toml  build.rs  conanfile.py
rust/perspective-server/cmake/modules/: FindProtoc.cmake
rust/perspective-server/conan/profiles/: macos-arm64-static  macos-x64-static  windows-x64-static
rust/perspective-server/cpp/perspective/: CMakeLists.txt
rust/perspective-server/cpp/protos/: CMakeLists.txt
